name: "cconv-ppx"
version: "0.4"
opam-version: "2.0"
synopsis: "Combinators for Type Conversion in OCaml"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
    ["dune" "build" "-p" name "-j" jobs]
    ["dune" "build" "@doc" "-p" name] {with-doc}
    ["dune" "runtest" "-p" name] {with-test}
]
depends: [
    "dune" {build}
    "ocamlfind" {build}
    "cconv"
    "ppx_deriving" { >= "2.0" }
    "ppxlib"
    "cppo"      {build}
    "ppx_tools" {build}
    "ocaml" { >= "4.02" }

    "mdx" {with-test}
    "sexplib" {with-test}
    "yojson" {with-test}
    "bencode" {with-test}
]
tags: ["conversion" "gadt" "serialization" "ppx-deriving"]
homepage: "https://github.com/c-cube/cconv/"
doc: "https://c-cube.github.io/cconv"
dev-repo: "git+https://github.com/c-cube/cconv.git"
bug-reports: "https://github.com/c-cube/cconv/issues/"
