name: "cconv"
version: "0.4"
opam-version: "1.2"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
    ["jbuilder" "build" "-p" name "-j" jobs]
]
install: [
    [make "install"]
]
build-doc: [ make "doc" ]
build-test: [ make "test" ]
depends: [
    "ocamlfind" {build}
    "jbuilder"  {build}
]
depopts: [
    "bencode"
    "sexplib"
    "yojson"
    "ppx_deriving"
    "ppx_driver"
    "cppo"      {build}
    "ppx_tools" {build}
]
tags: ["conversion" "gadt" "serialization"]
homepage: "https://github.com/c-cube/cconv/"
doc: "http://cedeela.fr/~simon/software/cconv/"
available: [
    ocaml-version >= "4.01.0"
]
conflicts: [
  "ppx_deriving" { < "2.0" }
]
dev-repo: "https://github.com/c-cube/cconv.git"
bug-reports: "https://github.com/c-cube/cconv/issues/"
