name: "cconv"
version: "0.4"
opam-version: "2.0"
synopsis: "Combinators for Type Conversion in OCaml"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
    ["jbuilder" "build" "-p" name "-j" jobs]
    ["jbuilder" "build" "@doc" "-p" name] {with-doc}
    ["jbuilder" "runtest" "-p" name] {with-test}
]
depends: [
    "ocamlfind" {build}
    "jbuilder"  {build}
]
depopts: [
    "bencode"
    "sexplib"
    "yojson"
    "ppx_deriving" { >= "2.0" }
    "ppx_driver"
    "cppo"      {build}
    "ppx_tools" {build}
    "ocaml" { >= "4.01.0" }
]
tags: ["conversion" "gadt" "serialization"]
homepage: "https://github.com/c-cube/cconv/"
doc: "https://c-cube.github.io/cconv"
dev-repo: "git+https://github.com/c-cube/cconv.git"
bug-reports: "https://github.com/c-cube/cconv/issues/"
